# fasterthefuck

./: .gitignore  AGENTS.md  Cargo.toml  ftf_shell_integration.sh
src/: config.rs  corrector.rs  error.rs  fuzzy.rs  lib.rs  main.rs  shell.rs  types.rs
src/rules/: macros.rs  mod.rs
src/rules/builders/: fuzzy.rs  mod.rs  regex.rs  simple.rs
src/rules/filesystem/: mod.rs
src/rules/git/: mod.rs
src/rules/package_managers/: mod.rs
src/rules/permissions/: mod.rs
